--- a/style.css
+++ b/style.css
@@ -1,7 +1,12 @@
-html, body {
-  margin: 0;
-  padding: 0;
+body {
+	background-color: white;
 }
-canvas {
-  display: block;
+
+h3 {
+	font-size: 24px;
+	color: #000000;
+	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+  	font-weight: 300;
+  	padding-left: 200px;
+  	padding-top: 30px;
 }
